moved to parcel

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html >
 <html lang="en-US">
 <head>
-  <title>Scratch</title>
-  <link rel="stylesheet" type="text/css" href="bundle.css">
+  <title>Scratch UI</title>
 </head>
 <body>
   <h1>Do you see nice input field?</h1>
   <br>
-  <input type="text" class="big field">
-  <script type="text/javascript" src="bundle.js"></script>
+  <input type="text" class="ui big field">
+  <button class="ui big button">Search</button>
+
+  <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
