moved to parcel, fixed unit

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
   <h1>Do you see nice input field?</h1>
   <br>
-  <input type="text" class="ui big field">
-  <button class="ui big button">Search</button>
+  <input type="text" class="ui field">
+  <button class="ui button">Search</button>
 
   <script type="text/javascript" src="./index.js"></script>
 </body>
